Changes since CEXP-2.1
 2012/07/17:
 - ctyps.h, ctyps.c: introduced UInt type (not used yet). Use designated
   array initializers when building type converter matrix.
 - cexpsyms.c: BUGFIX - _cexp_addrcomp() cannot just return 'int'
   difference between pointers. Result is wrong for e.g.,
   (void *) 1 - (void*)(-1) or if pointers are larger than 'int'.
   We now do explicit pointer comparison.
 2012/07/16:
 - Makefile.am, configure.ac, elfsyms.c, elfdlsyms.c elfdlsyms.h:
   added support for adding dynamic symbols of all dependent shared
   libraries (currently linked to executable). This needs GNU
   extension dl_iterate_phdrs() from link.h
 - cexpsyms.c: BUGFIX - must not add 'nentries' when computing aindex
   array index.
 2012/07/16:
 - cexpmod.c: BUGFIX - addrInModule dereferenced 'segs' which may be NULL if
   loader is disabled. Added checks for USE_LOADER.
 2012/07/12:
 - cexpsyms.c, cexpsymsP.h:
    o added cexpNewSymTbl(), cexpSortSymTbl(), cexpAddSymTbl().
      These allow for constructing a single symbol table from
      multiple external tables.
    o Support re-using external strings w/o copying them.
 - elfsyms.c: try pmelf_mapstrm() first and fall back on pmelf_newstrm.
 - elfsyms.c:
     o undef USE_ELF_MEMORY (but copy to memory if loading via rsh)
     o use cexpSearchFile() to locate symbol file
 - xsyms.c:
    o added option to accept undefined symbols.
    o check return value of pmelf_newstrm().
 - Makefile.am, configure.ac, cexp.c, cexplock.h, cexplock.c, cexpmod.c, 
   context.h:
   Implemented support for using pthread mutexes, rwlocks and thread-specific
   keys to support multithreaded CEXP on pthread platforms. 
   Must be enabled at configure-time by giving --enable-pthreads.
 2012/07/11:
 - cexp.c: BUGFIX - cexpSearchFile() must not free 'thename' if it is handed
           out to the user (ugly API anyways).
 - cexpsyms.c, rshload.c, Makefile.am: moved rshLoad() into separate file.
 2012/06/28: